tests/sema/negative/return_type_mismatch.nv
fn f() : int {
    return true;
}

fn main() : void {
    return;
}
